--- a/adequate.css
+++ b/adequate.css
@@ -1,35 +1,76 @@
 body {
-    /* Body styling adapted from http://bettermotherfuckingwebsite.com/,
-     * by Drew McConville and Gabe Hammersmith. */
+    font-size: 14px;
     margin: 2em auto;
     max-width: 40em;
     line-height: 1.4;
-    color: #333;
-    /* gentler default, closer to the middle of our rand color range */
+    color: #000000;
     background-color: rgb(240, 240, 240);
-    /* Prevent FOUC: https://stackoverflow.com/a/66010659 */
-    opacity: 0;
-    /* Accompanies the above, and removes background color flickering on
-     * when repeatedly refreshing the page. Interestingly, this doesn't
-     * always show a fade-in (at least on Chromium?); I think this is because
-     * of the "async" attributes of the randcolor.js <script> tags. Wack.
-     * https://stackoverflow.com/questions/3221561#comment129519385_66010659
-     */
+    opacity: 100;
     transition: all 0.5s;
     padding: 0 1em;
-    font-family: "Times New Roman", Times, serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+@font-face {
+    font-family: 'The Billion';
+    src: url('fonts/The Billion.ttf') format('truetype'); 
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'simple';
+    src: url('fonts/SimpleHandmade.ttf') format('truetype');
+    font-style: normal;
+}
+
 .monotext {
     font-size: medium;
     font-family: monospace;
 }
-.desc {
-    margin-left: 2em;
+
+.tooltip {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+    position: absolute;
+    background-color: #fff;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    display: none;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    z-index: 100;
+    max-width: 250px;
+    transform: translateX(-50%); /* Ajuste o -10px para a distância desejada entre o tooltip e o elemento alvo */
 }
-.sb {
-    font-weight: bold;
+
+.tooltip .links a {
+    display: inline;
+    text-decoration: none;
+    color: #007bff;
 }
-/* Based on https://stackoverflow.com/questions/11903773/add-space-between-li-elements/11903886#comment88753789_11903886. */
-li:not(:last-child) {
-    margin-bottom: 1em;
+
+.tooltip .description {
+    font-size: 14px;
+    color: #000000;
+}
+
+.handwriting {
+    font-family: 'The Billion', sans-serif;
+    font-size: 70px;
+    fill: #000000;
+    cursor: pointer;
+}
+
+.main-label {
+    font-family: 'The Billion', sans-serif;
+    font-size: 50px;
+    fill: #000000;
+}
+
+.label {
+    font-family: 'simple', sans-serif;
+    font-size: 30px;
+    fill: #000000;
+    cursor: pointer;
 }
