--- a/adequate.css
+++ b/adequate.css
@@ -13,14 +13,14 @@ body {
 
 @font-face {
     font-family: 'The Billion';
-    src: url('fonts/The Billion.ttf') format('truetype'); 
+    src: url('tree/main/fonts/The Billion.ttf') format('truetype'); 
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'simple';
-    src: url('fonts/SimpleHandmade.ttf') format('truetype');
+    src: url('tree/main/fonts/SimpleHandmade.ttf') format('truetype');
     font-style: normal;
 }
 
