--- a/adequate.css
+++ b/adequate.css
@@ -12,15 +12,23 @@ body {
 }
 
 @font-face {
+    font-family: 'homemade';
+    src: url('fonts/HomemadeApple-Regular.ttf') format('truetype'); 
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+@font-face {
     font-family: 'The Billion';
-    src: url('tree/main/fonts/The Billion.ttf') format('truetype'); 
+    src: url('fonts/The Billion.ttf') format('truetype'); 
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'simple';
-    src: url('tree/main/fonts/SimpleHandmade.ttf') format('truetype');
+    src: url('fonts/SimpleHandmade.ttf') format('truetype');
     font-style: normal;
 }
 
@@ -56,14 +64,14 @@ body {
 }
 
 .handwriting {
-    font-family: 'The Billion', sans-serif;
+    font-family: 'homemade', sans-serif;
     font-size: 70px;
     fill: #000000;
     cursor: pointer;
 }
 
 .main-label {
-    font-family: 'The Billion', sans-serif;
+    font-family: 'homemade', sans-serif;
     font-size: 50px;
     fill: #000000;
 }
