--- a/adequate.css
+++ b/adequate.css
@@ -1,4 +1,6 @@
 body {
+    font-family: 'Comic Neue';
+    text-align: center;
     font-size: 14px;
     margin: 2em auto;
     max-width: 40em;
@@ -8,37 +10,33 @@ body {
     opacity: 100;
     transition: all 0.5s;
     padding: 0 1em;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-@font-face {
-    font-family: 'homemade';
-    src: url('fonts/HomemadeApple-Regular.ttf') format('truetype'); 
+.comic-neue-regular {
+    font-family: "Comic Neue", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+.homemade-apple-regular {
+    font-family: "Homemade Apple", cursive;
+    font-weight: 400;
+    font-style: normal;
+}
+
+h2 {
+    font-family: "Homemade Apple", cursive;
+    text-align: center;
+    font-size: 30px;
     font-weight: normal;
-    font-style: normal;
 }
-
-
-@font-face {
-    font-family: 'The Billion';
-    src: url('fonts/The Billion.ttf') format('truetype'); 
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'simple';
-    src: url('fonts/SimpleHandmade.ttf') format('truetype');
-    font-style: normal;
-}
-
 .monotext {
     font-size: medium;
     font-family: monospace;
 }
 
 .tooltip {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Comic Neue';
     text-align: center;
     position: absolute;
     background-color: #fff;
@@ -49,7 +47,7 @@ body {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     z-index: 100;
     max-width: 250px;
-    transform: translateX(-50%); /* Ajuste o -10px para a distância desejada entre o tooltip e o elemento alvo */
+    transform: translateX(-50%);
 }
 
 .tooltip .links a {
@@ -64,21 +62,21 @@ body {
 }
 
 .handwriting {
-    font-family: 'homemade', sans-serif;
-    font-size: 70px;
+    font-family: 'Homemade Apple', sans-serif;
+    font-size: 50px;
     fill: #000000;
     cursor: pointer;
 }
 
 .main-label {
-    font-family: 'homemade', sans-serif;
-    font-size: 50px;
+    font-family: 'Homemade Apple', sans-serif;
+    font-size: 35px;
     fill: #000000;
 }
 
 .label {
-    font-family: 'simple', sans-serif;
-    font-size: 30px;
+    font-family: 'Comic Neue', sans-serif;
+    font-size: 25px;
     fill: #000000;
     cursor: pointer;
 }
