--- a/adequate.css
+++ b/adequate.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Comic Neue';
+    font-family: Helvetica, Sans-Serif;
     text-align: center;
     font-size: 14px;
     margin: 2em auto;
@@ -12,12 +12,6 @@ body {
     padding: 0 1em;
 }
 
-.comic-neue-regular {
-    font-family: "Comic Neue", cursive;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
 .homemade-apple-regular {
     font-family: "Homemade Apple", cursive;
     font-weight: 400;
@@ -25,18 +19,19 @@ body {
 }
 
 h2 {
-    font-family: "Homemade Apple", cursive;
+    font-family: "Architects Daughter", cursive;
     text-align: center;
-    font-size: 30px;
+    font-size: 35px;
     font-weight: normal;
 }
+
 .monotext {
     font-size: medium;
     font-family: monospace;
 }
 
 .tooltip {
-    font-family: 'Comic Neue';
+    font-family: Helvetica, Sans-Serif;
     text-align: center;
     position: absolute;
     background-color: #fff;
@@ -75,7 +70,7 @@ h2 {
 }
 
 .label {
-    font-family: 'Comic Neue', sans-serif;
+    font-family: "Architects Daughter", cursive;
     font-size: 25px;
     fill: #000000;
     cursor: pointer;
