--- a/adequate.css
+++ b/adequate.css
@@ -1,77 +1,29 @@
 body {
-    font-family: Helvetica, Sans-Serif;
-    text-align: center;
-    font-size: 14px;
+    /* Body styling adapted from http://bettermotherfuckingwebsite.com/,
+     * by Drew McConville and Gabe Hammersmith. */
     margin: 2em auto;
     max-width: 40em;
     line-height: 1.4;
-    color: #000000;
+    color: #333;
+    /* gentler default, closer to the middle of our rand color range */
     background-color: rgb(240, 240, 240);
-    opacity: 100;
+    /* Prevent FOUC: https://stackoverflow.com/a/66010659 */
+    opacity: 0;
     transition: all 0.5s;
     padding: 0 1em;
+    font-family: "Times New Roman", Times, serif;
 }
-
-.homemade-apple-regular {
-    font-family: "Homemade Apple", cursive;
-    font-weight: 400;
-    font-style: normal;
-}
-
-h2 {
-    font-family: "Architects Daughter", cursive;
-    text-align: center;
-    font-size: 35px;
-    font-weight: normal;
-}
-
 .monotext {
     font-size: medium;
     font-family: monospace;
 }
-
-.tooltip {
-    font-family: Helvetica, Sans-Serif;
-    text-align: center;
-    position: absolute;
-    background-color: #fff;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    display: none;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    z-index: 100;
-    max-width: 250px;
-    transform: translateX(-50%);
+.desc {
+    margin-left: 2em;
 }
-
-.tooltip .links a {
-    display: inline;
-    text-decoration: none;
-    color: #007bff;
+.sb {
+    font-weight: bold;
 }
-
-.tooltip .description {
-    font-size: 14px;
-    color: #000000;
-}
-
-.handwriting {
-    font-family: 'Homemade Apple', sans-serif;
-    font-size: 50px;
-    fill: #000000;
-    cursor: pointer;
-}
-
-.main-label {
-    font-family: 'Homemade Apple', sans-serif;
-    font-size: 35px;
-    fill: #000000;
-}
-
-.label {
-    font-family: "Architects Daughter", cursive;
-    font-size: 25px;
-    fill: #000000;
-    cursor: pointer;
+/* Based on https://stackoverflow.com/questions/11903773/add-space-between-li-elements/11903886#comment88753789_11903886. */
+li:not(:last-child) {
+    margin-bottom: 1em;
 }
