fix navigation padding

--- a/style.css
+++ b/style.css
@@ -65,7 +65,8 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 0;
+    padding: 0.5rem 1.5rem;
+    height: 50px
 }
 
 .logo {
