change button color

--- a/style.css
+++ b/style.css
@@ -299,8 +299,10 @@ body {
 }
 
 .btn-secondary:hover {
-    background: var(--gradient-1);
-    color: white;
+    /*background: var(--gradient-1);*/
+    background: rgba(210, 210, 210, 0.3);
+    color: var(--primary-color);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 /* Newsletter Banner - FIXED */
@@ -473,7 +475,7 @@ body {
     background: rgba(255, 255, 255, 0.8);
     color: var(--primary-color);
     text-decoration: none;
-    border-radius: 48px;
+    border-radius: 48px; 
     font-weight: 500;
     font-size: 0.9rem;
     transition: all 0.3s ease;
@@ -483,9 +485,10 @@ body {
 }
 
 .project-link:hover {
-    background: var(--gradient-1);
-    color: white;
-    transform: translateY(-2px);
+    background: rgba(210, 210, 210, 0.3);
+    border: 1px solid var(--primary-color);
+    color: var(--primary-color);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 /* Special note card */
