--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ body {
 
 .hero {
   padding: 7.5rem 0 4rem 0;
-  min-height: 60vh;
+  min-height: 70vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -132,25 +132,19 @@ body {
   justify-content: center;
   position: relative;
   overflow: hidden;
-  margin-bottom: 3rem;
-  aspect-ratio: 16 / 4;
-}
-
-.banner-image img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  text-align: center;
+  color: var(--text-light);
+  margin: 0 0 3rem 0;
   border-radius: 6px;
-  display: block;
+  max-height: 20vh;
+  padding: 4rem 2rem;
+
+  background-image: url("docs/C.png");
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .banner-content {
-  position: relative; 
-  color: var(--text-light); 
-  text-align: center;
   max-width: 720px;
   padding: 0 2rem;
 }
@@ -162,7 +156,7 @@ body {
 }
 
 .banner-content p {
-  font-size: 1em;
+  font-size: 1rem;
   margin-bottom: 1.8rem;
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.7);
 }
