fix button position

--- a/style.css
+++ b/style.css
@@ -511,6 +511,7 @@ body {
 
 .btn {
   display: inline-flex;
+  margin-top: 1rem;
   justify-content: center;
   align-items: center;
   text-decoration: none;
