change PNG to WEBP

--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ body {
   margin: 0 0 var(--spacing-3xl) 0;
   border-radius: var(--border-radius-md);
   padding: var(--spacing-2xl) var(--spacing-2xl);
-  background-image: url("docs/C.png");
+  background-image: url("docs/C.webp");
   background-position: center;
   background-repeat: no-repeat;
 }
