--- a/style.css
+++ b/style.css
@@ -314,12 +314,15 @@ body {
 
 .section-description {
   color: var(--text-dim);
-  text-wrap: balance;
   margin-top: var(--spacing-lg); 
   margin-bottom: var(--spacing-3xl);
   line-height: 1.6;
   margin-top: var(--spacing-2xl);
   text-align: center;
+
+  max-width: 850px; 
+  margin-left: auto; 
+  margin-right: auto;
 }
 
 /* === CARD GRID === */
